recursive find with paths printed
Updated the find functionality to recursively print any subpaths
matching the specified tags, along with matching tags for each subpath.
- add walkdir for walking paths

Change a couple argument names:
- list -> ls
- remove -> rm

Increment version from 0.1.0 to 0.2.0

Update README with basic instructions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "linux-fs-tagger"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["AlteredOxide <me@alteredoxide.com>"]
 description = """
 linux-fs-tagger is currently a very minimal (alpha) command-line tool for
@@ -33,4 +33,5 @@ name = "tag"
 anyhow = "1.0.75"
 clap = { version = "4.4.0", features = ["derive"] }
 regex = "1.9.4"
+walkdir = "2.3.3"
 xattr = "1.0.1"
